--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -6,6 +6,8 @@
     <title>Viivi - Your Fashion Destination</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+
     <style>
     :root {
         --primary-color: #3a96f1;
@@ -60,7 +62,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" th:href="@{/products}">Products</a></li>
-                        <li class="nav-item"><a class="nav-link" th:href="@{/about}">About</a></li>
+                        <li class="nav-item"><a class="nav-link" th:href="@{/v1/recommendations}">Recommendation</a></li>
                         <li class="nav-item"><a class="nav-link" th:href="@{/contact}">Contact</a></li>
                         <li class="nav-item">
                             <a class="nav-link" th:href="@{/cart}">
@@ -71,7 +73,7 @@
     
                         <!-- User Authentication Dropdown -->
                     <li th:if="${#authentication != null and #authentication.authenticated and #authentication.name != 'anonymousUser'}" class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <span th:text="${#authentication.name}"></span>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
